# isciml

./: .gitignore  Dockerfile  README.md  config.yaml  config_adjoint.yaml  config_forward.yaml  datagen.py  ginkgo-instructions.txt  isciml.py  material_properties_all.npy  material_properties_sus.npy  py2Ginkgo.py  pyproject.toml  receiver_locations.csv  requirements.txt  setup.py  simple-solver.cpp  test.vtk  tests.py  train.py
FE_Frequency_Domain/Ginkgo/: simple-solver.cpp
FE_Frequency_Domain/Mesh_Files/: Hormozblocks3d.vtk  final_mesh_Xushan.vtk
FE_Frequency_Domain/Scripts/: NextGen_Parallel_FEFD_WireLoop.py  NextGen_Parallel_FE_EM_wire_source.py  inpt_NextGen_Parallel_FEFD_WireLoop.py  inpt_NextGen_Parallel_FE_EM_wire_source.py
data/: output.npy  receiver_locations.csv  receiver_locations_with_header.csv
data/adjoints/inputs/: geomag_pipe_sus_3.npy
data/adjoints/outputs/: adjoint_sus_0.npy
data/vtk_files/: mesh3.vtk
