[tool.poetry]
name = "isciml"
version = "0.1.0"
description = "Imaging using Scientific Machine Learning"
authors = ["Santi Adavani <santis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyvista = "^0.39.1"
click = "^8.1.3"
numpy = "^1.24.3"
pandas = "^2.0.2"
rich = "^13.3.5"
black = "^23.3.0"
mpi4py = "^3.1.4"
tqdm = "^4.65.0"
pyyaml = "^6.0"
lightning = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
isciml = "isciml:isciml"